@@ -1,18 +1,9 @@
-rm /home/oms95/inventoryUpload/*.gz
+curl -u sftp_SterlingDev:P6@a64Tm93?7 -T /home/oms95/inventoryUpload/*.gz sftp://sdex.indigo.ca/Sterling-QA/store-inventory-full-from-sterling/
 
-sed -i -e '/^[[:blank:]]*$/d' /home/oms95/inventoryUpload/InventoryUplaod.xml
+touch /home/oms95/inventoryUpload/execute.done
 
-sed -i -e '1i\'"<?xml version="1.0" ?>\n<AvailabilityChanges>" -e '$ a\'"</AvailabilityChanges>" /home/oms95/inventoryUpload/InventoryUplaod.xml
+curl -u sftp_SterlingDev:P6@a64Tm93?7 -T /home/oms95/inventoryUpload/*.done sftp://sdex.indigo.ca/Sterling-QA/store-inventory-full-from-sterling/
 
-cd /home/oms95/inventoryUpload
-  for f in *.xml
-        do
-             echo "Compressing file: ${f}"
-            gzip -c -f < $f > ${f%%.xml}.gz
-        done
+rm /home/oms95/inventoryUpload/*
 
-  echo "GZip Compression Completed..."
-  
-curl -u sftp_SterlingDev:P6@a64Tm93?7 -T /home/oms95/inventoryUpload/*.gz sftp://sdex.indigo.ca/Sterling/store-inventory-full-from-sterling/
-
-rm /home/oms95/inventoryUpload/*.xml
+nohup /datadrive/opt/IBM/bin/agentserver.sh Indg_RTAMDeltaAgent \"-Xms512m -Xmx512m -XX:MaxPermSize=512m\" > /datadrive/opt/IBM/logs/Indg_RTAMDeltaAgent.log &
